Update: modal z-index fixed

--- a/presentation_layer/styles/style.css
+++ b/presentation_layer/styles/style.css
@@ -56,7 +56,12 @@ h2 {
 header {
     position: sticky;
     top: 0;
-    z-index: 1500;
+    z-index: 1100;
+}
+.modal {
+    padding-top: var(--size-6xl);
+    padding-bottom: var(--size-5xl);
+    z-index: 1500 !important;
 }
 .btn {
     border-radius: 10px !important;
@@ -75,7 +80,7 @@ header {
 }
 #sidebarBackdrop {
     z-index: 30;
-    background-color: #000c23!important;
+    background-color: #000c23 !important;
     opacity: 0.7;
 }
 .nav-pills .nav-link {
